# sshash-rs

./: Cargo.toml  README.md
crates/sshash-cli/: Cargo.toml
crates/sshash-cli/src/: analyze_size.rs  main.rs
crates/sshash-lib/: Cargo.toml  README.md
crates/sshash-lib/src/: constants.rs  dictionary.rs  encoding.rs  hasher.rs  kmer.rs  lib.rs  minimizer.rs  minimizers_control_map.rs  mphf_config.rs  offsets.rs  serialization.rs  sparse_and_skew_index.rs  spectrum_preserving_string_set.rs  streaming_query.rs
crates/sshash-lib/src/builder/: buckets.rs  cf_seg.rs  config.rs  dictionary_builder.rs  encode.rs  external_sort.rs  minimizer_tuples.rs  mod.rs  parse.rs
crates/sshash-lib/tests/: build_pipeline_integration.rs
